test/libsolidity/syntaxTests/constructor/interface_constructor.sol
interface I {
	constructor();
}
// ----
// TypeError: (15-29): Constructor cannot be defined in interfaces.
// TypeError: (15-29): Constructor must be implemented if declared.
